<resources>
    <string name="app_name">CSE</string>
    <string name="email">nannigalaxy25@gmail.com</string>
    <string name="title">Computer Science and Engineering</string>
    <string name="splash_title">Department\nof\nComputer Science and Engineering</string>
    <string name="events">Events and Workshops</string>
    <string name="syllb">Syllabus</string>
    <string name="about">About</string>
    <string name="qp">Question Papers</string>
    <string name="class_act">Class</string>
    <string name="campus">Campus.uno</string>
    <string name="nptel">NPTEL</string>
    <string name="vtu">VTU Results</string>
    <string name="notes">Study Material</string>
    <string name="settings">Settings</string>
    <string name="sem3">3RD SEMESTER</string>
    <string name="sem4">4TH SEMESTER</string>
    <string name="sem5">5th Semester</string>
    <string name="sem6">6TH SEMESTER</string>
    <string name="sem7">7th Semester</string>
    <string name="sem8">8TH SEMESTER</string>
    <string name="cs51">Management and Entrepreneurship for IT Industry</string>
    <string name="cs52">Computer Networks</string>
    <string name="cs53">Database Management System</string>
    <string name="cs54">Automata Theory and Computability</string>
    <string name="cs552">Introduction to Software Testing</string>
    <string name="cs553">Advanced Java and J2EE</string>
    <string name="cs562">Artificial Intelligence</string>
    <string name="csl57">Computer Network Laboratory</string>
    <string name="csl58">DBMS Laboratory with Mini Project</string>
    <string name="cs61">Cryptography, Network Security and Cyber Law</string>
    <string name="cs62">Computer Graphics and Visualization</string>
    <string name="cs63">System Software and Compiler Design</string>
    <string name="cs64">Operating Systems</string>
    <string name="cs651">Data Mining and Data Warehousing</string>
    <string name="cs653">OperationsResearch</string>
    <string name="cs664">Python Application Programming</string>
    <string name="csl67">System Software and Operating System Laboratory</string>
    <string name="csl68">Computer Graphics Laboratory with Mini Project</string>
    <string name="core">Core</string>
    <string name="elective">Professional Elective</string>
    <string name="openelect">Open Elective</string>
    <string name="lab">Laboratory</string>
    <string name="man">Manual</string>
    <string name="crd4">Credit: 04</string>
    <string name="crd3">Credit: 03</string>
    <string name="crd2">Credit: 02</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string-array name="semester">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="cs51_content">

        \n<b>Module 1:</b> \n

        Introduction - Meaning, nature and characteristics of management, scope and
Functional areas of management, goals of management, levels of management,
brief overview of evolution of management theories,. Planning- Nature,
importance, types of plans, steps in planning, Organizing- nature and purpose,
types of Organization, Staffing- meaning, process of recruitment and selection.

        \n\n
        <b>Module 2:</b> \n

        Directing and controlling- meaning and nature of directing, leadership styles,
motivation Theories, Communication- Meaning and importance, Coordination-
meaning and importance, Controlling- meaning, steps in controlling, methods of
establishing control.

        \n\n
        <b>Module 3:</b> \n

Entrepreneur – meaning of entrepreneur, characteristics of entrepreneurs, classification and types of entrepreneurs, various stages in entrepreneurial
process, role of entrepreneurs in economic development, entrepreneurship in
India and barriers to entrepreneurship. Identification of business opportunities,
market feasibility study, technical feasibility study, financial feasibility study and
social feasibility study.

\n\n
        <b>Module 4:</b> \n

Preparation of project and ERP - meaning of project, project identification,
project selection, project report, need and significance of project report, contents,
formulation, guidelines by planning commission for project report, Enterprise
Resource Planning: Meaning and Importance- ERP and Functional areas of
Management – Marketing / Sales- Supply Chain Management – Finance and
Accounting – Human Resources – Types of reports and methods of report
generation

        \n\n
        <b>Module 5:</b> \n

Micro and Small Enterprises: Definition of micro and small enterprises,
characteristics and advantages of micro and small enterprises, steps in establishing
micro and small enterprises, Government of India indusial policy 2007 on micro and
small enterprises, case study (Microsoft), Case study(Captain G R Gopinath),case
study (N R Narayana Murthy &amp; Infosys), Institutional support: MSME-DI, NSIC,
SIDBI, KIADB, KSSIDC, TECSOK, KSFC, DIC and District level single window
agency, Introduction to IPR.

        \n\n

        <b>Text Books:</b>\n
1. Principles of Management -P. C. Tripathi, P. N. Reddy; Tata McGraw Hill, 4th / 6th
Edition, 2010.\n
2. Dynamics of Entrepreneurial Development &amp; Management -Vasant Desai Himalaya
Publishing House.\n
3. Entrepreneurship Development -Small Business Enterprises -Poornima M
Charantimath Pearson Education – 2006.\n
4. Management and Entrepreneurship - Kanishka Bedi- Oxford University Press-2017\n\n
        <b>Reference Books:</b>\n
1. Management Fundamentals -Concepts, Application, Skill Development Robert Lusier
– Thomson.\n
2. Entrepreneurship Development -S S Khanka -S Chand &amp; Co.\n
3. Management -Stephen Robbins -Pearson Education /PHI -17th Edition, 2003\n\n


</string>
    <string name="cs52_content">
        \n<b>Module 1:</b>\n
"Application Layer: Principles of Network Applications: Network Application
Architectures, Processes Communicating, Transport Services Available to
Applications, Transport Services Provided by the Internet, Application-Layer
Protocols. The Web and HTTP: Overview of HTTP, Non-persistent and
Persistent Connections, HTTP Message Format, User-Server Interaction:
Cookies, Web Caching, The Conditional GET, File Transfer: FTP Commands &amp;
Replies, Electronic Mail in the Internet: SMTP, Comparison with HTTP, Mail
Message Format, Mail Access Protocols, DNS; The Internet's Directory Service:
Services Provided by DNS, Overview of How DNS Works, DNS Records and
Messages, Peer-to-Peer Applications: P2P File Distribution, Distributed Hash
Tables, Socket Programming: creating
 Network Applications: Socket
Programming with UDP, Socket Programming with TCP.
"

        \n\n
        <b>Module 2:</b> \n

       Transport Layer : Introduction and Transport-Layer Services: Relationship
Between Transport and Network Layers, Overview of the Transport Layer in the
Internet, Multiplexing and Demultiplexing: Connectionless Transport: UDP,UDP
Segment Structure, UDP Checksum, Principles of Reliable Data Transfer:
Building a Reliable Data Transfer Protocol, Pipelined Reliable Data Transfer
Protocols, Go-Back-N, Selective repeat, Connection-Oriented Transport TCP:
The TCP Connection, TCP Segment Structure, Round-Trip Time Estimation and
Timeout, Reliable Data Transfer, Flow Control, TCP Connection Management,
Principles of Congestion Control: The Causes and the Costs of Congestion,
Approaches to Congestion Control, Network-assisted congestion-control
example, ATM ABR Congestion control, TCP Congestion Control: Fairness.


        \n\n
        <b>Module 3:</b> \n
"The Network layer: What's Inside a Router?: Input Processing, Switching,
Output Processing, Where Does Queuing Occur? Routing control plane, IPv6,A
Brief foray into IP Security, Routing Algorithms: The Link-State (LS) Routing
Algorithm, The Distance-Vector (DV) Routing Algorithm, Hierarchical Routing,
Routing in the Internet, Intra-AS Routing in the Internet: RIP, Intra-AS Routing
in the Internet: OSPF, Inter/AS Routing: BGP, Broadcast Routing Algorithms
and Multicast.
"

\n\n
        <b>Module 4:</b> \n
Wireless and Mobile Networks: Cellular Internet Access: An Overview of
Cellular Network Architecture, 3G Cellular Data Networks: Extending the
Internet to Cellular subscribers, On to 4G:LTE,Mobility management: Principles,
Addressing, Routing to a mobile node, Mobile IP, Managing mobility in cellular
Networks, Routing calls to a Mobile user, Handoffs in GSM, Wireless and
Mobility: Impact on Higher-layer protocols.


        \n\n
        <b>Module 5:</b> \n
Multimedia Networking: Properties of video, properties of Audio, Types of
multimedia Network Applications, Streaming stored video: UDP Streaming,
HTTP Streaming, Adaptive streaming and DASH, content distribution Networks,
case studies: Netflix, You Tube and Kankan.
Network Support for Multimedia: Dimensioning Best-Effort Networks,
Providing Multiple Classes of Service, Diffserv, Per-Connection Quality-of-
Service (QoS) Guarantees: Resource Reservation and Call Admission

        \n\n

        <b>Text Books:</b>\n
1. James F Kurose and Keith W Ross, Computer Networking, A Top-Down Approach,
Sixth edition, Pearson,2017 .\n\n
        <b>Reference Books:</b>\n
1. Behrouz A Forouzan, Data and Communications and Networking, Fifth Edition,
McGraw Hill, Indian Edition\n
2. Larry L Peterson and Brusce S Davie, Computer Networks, fifth edition, ELSEVIER\n
3. Andrew S Tanenbaum, Computer Networks, fifth edition, Pearson\n
4. Mayank Dave, Computer Networks, Second edition, Cengage Learning
\n\n
    </string>
</resources>