<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".MainActivity"
    android:background="@color/White">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:id="@+id/title"
    android:layout_marginTop="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_alignStart="@id/menus"
    android:layout_alignEnd="@id/menus">

    <ImageView
        android:id="@+id/dbtn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:background="@drawable/ripple_effect_3"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/menu_icon"/>


    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/title"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="4dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center_horizontal"/>

</LinearLayout>



    <LinearLayout
        android:id="@+id/menus"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_below="@id/title"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:useDefaultMargins="true">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardresult"
            android:layout_width="340dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:elevation="5dp"
            android:focusable="true"
            app:cardElevation="8dp"
            android:onClick="card_campus"
            app:cardBackgroundColor="@color/colorAccent"
            android:foreground="@drawable/ripple_effect"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_gravity="center">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="30dp"
                    android:text="@string/campus"
                    android:textColor="@color/White"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="25dp"
                    android:src="@drawable/campus_icon"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardworkshop"
            android:layout_width="340dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:elevation="5dp"
            android:focusable="true"
            app:cardElevation="8dp"
            android:onClick="card_nptel"
            app:cardBackgroundColor="@color/colorAccent"
            android:foreground="@drawable/ripple_effect"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_gravity="center">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="30dp"
                    android:text="@string/nptel"
                    android:textColor="@color/White"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="25dp"
                    android:src="@drawable/nptel_icon" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

<!--        <androidx.cardview.widget.CardView-->
<!--            android:id="@+id/cardvtures"-->
<!--            android:layout_width="340dp"-->
<!--            android:layout_height="80dp"-->
<!--            android:layout_margin="10dp"-->
<!--            android:clickable="true"-->
<!--            android:elevation="5dp"-->
<!--            android:focusable="true"-->
<!--            app:cardElevation="8dp"-->
<!--            android:onClick="card_vtu_res"-->
<!--            app:cardBackgroundColor="@color/colorAccent"-->
<!--            android:foreground="@drawable/ripple_effect"-->
<!--            app:cardCornerRadius="10dp">-->

<!--            <RelativeLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal"-->
<!--                android:padding="5dp"-->
<!--                android:layout_gravity="center">-->


<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_centerVertical="true"-->
<!--                    android:layout_marginStart="30dp"-->
<!--                    android:text="@string/vtu_results"-->
<!--                    android:textColor="@color/White"-->
<!--                    android:textSize="16sp" />-->

<!--                <ImageView-->
<!--                    android:layout_width="50dp"-->
<!--                    android:layout_height="50dp"-->
<!--                    android:layout_alignParentEnd="true"-->
<!--                    android:layout_marginEnd="25dp"-->
<!--                    android:src="@drawable/exam_icon" />-->
<!--            </RelativeLayout>-->
<!--        </androidx.cardview.widget.CardView>-->

        <androidx.cardview.widget.CardView
            android:id="@+id/cardclass"
            android:layout_width="340dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:elevation="5dp"
            android:focusable="true"
            app:cardElevation="8dp"
            android:onClick="card_class"
            app:cardBackgroundColor="@color/colorAccent"
            android:foreground="@drawable/ripple_effect"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_gravity="center">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="30dp"
                    android:text="@string/class_act"
                    android:textColor="@color/White"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="25dp"
                    android:src="@drawable/class_icon" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardexplore"
            android:layout_width="340dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:elevation="5dp"
            android:focusable="true"
            app:cardElevation="8dp"
            android:onClick="card_explore"
            app:cardBackgroundColor="@color/colorAccent"
            android:foreground="@drawable/ripple_effect"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_gravity="center">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="30dp"
                    android:text="@string/explore"
                    android:textColor="@color/White"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="25dp"
                    android:src="@drawable/explore_icon" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>



    </RelativeLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/snackbarPosition"/>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:menu="@menu/main_drawer"
        app:headerLayout="@layout/nav_header"
        android:layout_gravity="start"
        app:itemIconTint="@color/colorAccent"/>
</androidx.drawerlayout.widget.DrawerLayout>